# git-os-job

./: .gitignore  .gitreview  CONTRIBUTING.rst  README.md  README.rst  announce.rst  setup.cfg  setup.py  tox.ini
git_os_job/: cmd.py
