[metadata]
name = git-os-job
summary = Show the OpenStack job logs for a commit
description-file = README.rst
license = Apache License (2.0)
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python
	Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
keywords = git gerrit review
author = Doug Hellmann
author-email = doug.hellmann@dreamhost.com
home-page = https://pypi.python.org/pypi/git-os-job

[files]
packages =
    git_os_job

[entry_points]
console_scripts =
    git-os-job = git_os_job.cmd:main
